--- a/BudgetIA/data/user_config.json
+++ b/BudgetIA/data/user_config.json
@@ -1,3 +1,3 @@
 {
-    "planilha_path": "C:\\Users\\lucia\\Documents\\Projetos\\Python\\BudgetIA\\BudgetIA\\data\\planilha_mestra.xlsx"
+    "onboarding_state": "STRATEGY_FAILED_FALLBACK"
 }
