--- a/BudgetIA/pyproject.toml
+++ b/BudgetIA/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
     "xlsxwriter (>=3.2.5,<4.0.0)",
     "numpy-financial (>=1.0.0,<2.0.0)",
     "transformers (>=4.57.0,<5.0.0)",
+    "gspread (>=6.2.1,<7.0.0)",
+    "schedule (>=1.2.2,<2.0.0)",
+    "gspread-dataframe (>=4.0.0,<5.0.0)",
+    "python-telegram-bot (>=21.0,<22.0)",
 ]
 
 [tool.poetry]
@@ -42,7 +46,7 @@ mypy = "^1.17.0"
 black = "^25.1.0"
 isort = "^6.0.1"
 ruff = "^0.12.4"
-pandas-stubs = "^2.3.2.250926"
+pandas-stubs = "^2.2.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
