--- a/BudgetIA/pyproject.toml
+++ b/BudgetIA/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = [
     "google-api-python-client (>=2.0.0,<3.0.0)",
     "streamlit-authenticator (>=0.3.0,<0.4.0)",
     "cryptography (>=42.0.0,<43.0.0)",
+    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
+    "google-auth-httplib2 (>=0.2.1,<0.3.0)",
+    "python-magic-bin (>=0.4.14,<0.5.0)",
 ]
 
 [tool.poetry]
