--- a/BudgetIA/pyproject.toml
+++ b/BudgetIA/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "google-auth-oauthlib (>=1.2.3,<2.0.0)",
     "google-auth-httplib2 (>=0.2.1,<0.3.0)",
     "python-magic-bin (>=0.4.14,<0.5.0)",
+    "redis (>=7.0.1,<8.0.0)",
 ]
 
 [tool.poetry]
