--- a/BudgetIA/pyproject.toml
+++ b/BudgetIA/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "google-genai (>=1.55.0,<2.0.0)",
     "requests (>=2.31.0,<3.0.0)",
     "pywebpush (>=2.1.2,<3.0.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
 ]
 
 [tool.poetry]
