--- a/BudgetIA/pyproject.toml
+++ b/BudgetIA/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "cryptography (>=42.0.0,<43.0.0)",
     "google-auth-oauthlib (>=1.2.3,<2.0.0)",
     "google-auth-httplib2 (>=0.2.1,<0.3.0)",
-    "python-magic-bin (>=0.4.14,<0.5.0)",
+    "python-magic (>=0.4.27,<0.5.0)",
     "redis (>=7.0.1,<8.0.0)",
     "fastapi (>=0.124.2,<0.125.0)",
     "uvicorn (>=0.38.0,<0.39.0)",
