chore(ha): Flatten repository structure for Add-on compatibility

--- a/BudgetIA/Dockerfile
+++ b/BudgetIA/Dockerfile
@@ -1,60 +1,58 @@
-# Stage 1: Build the React PWA
-FROM node:20-alpine AS frontend-builder
+# Stage 1: Frontend Build
+FROM node:20-alpine as frontend
 WORKDIR /app/pwa
-
-# Install dependencies (caching layer)
+# Copy frontend deps (relative to build context root)
 COPY pwa/package.json pwa/package-lock.json ./
-RUN npm ci
-
-# Copy source and build
+RUN npm install
+# Copy frontend source
 COPY pwa/ ./
-# Build the PWA (Output usually in dist/)
 RUN npm run build
 
-# Stage 2: Python Backend & Runtime
+# Stage 2: Backend & Runtime
 FROM python:3.11-slim-bookworm
 
-# Home Assistant Add-on Labels (Optional but good practice)
-LABEL io.hass.version="1.0.0" io.hass.type="addon" io.hass.arch="armhf|aarch64|i386|amd64"
+# Add-on Labels
+LABEL io.hass.version="1.0.1" io.hass.type="addon" io.hass.arch="armhf|aarch64|i386|amd64"
 
-# Environment variables
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     POETRY_HOME="/opt/poetry" \
     POETRY_VIRTUALENVS_CREATE=false
 
-# Install system dependencies (curl for healthcheck/poetry, git if needed, libmagic1 for python-magic)
+WORKDIR /app
+
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
-    build-essential \
     libmagic1 \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Poetry
 RUN curl -sSL https://install.python-poetry.org | python3 -
 ENV PATH="$POETRY_HOME/bin:$PATH"
 
-WORKDIR /app
-
-# Install Python dependencies
+# Copy Backend Dependencies
 COPY pyproject.toml poetry.lock ./
-# Remove lock file to force resolution (fixing dependency mismatch/ABI issues)
-RUN rm poetry.lock && poetry install --only main --no-interaction --no-ansi --no-root
+
+# Install Dependencies (FIX: Remove lock first to force resolution)
+RUN rm -f poetry.lock && poetry install --only main --no-interaction --no-ansi --no-root
 
 # Copy Backend Source
 COPY src/ ./src/
 COPY data/ ./data/
-# Copy built frontend assets from Stage 1 to a serve directory
-COPY --from=frontend-builder /app/pwa/dist /app/static
+# Copy Scripts folder if needed (though run.sh is separate now)
+COPY scripts/ ./scripts/
+# Copy Entrypoint Script (now at root of context)
+COPY run.sh .
 
-# Create entrypoint script
-COPY scripts/run_addon.sh /run.sh
-RUN chmod +x /run.sh
+# Copy Frontend Assets to static dir (where main.py expects them)
+# Check main.py to confirm it serves from /app/static?
+# Previous run.sh export STATIC_DIR="/app/static".
+COPY --from=frontend /app/pwa/dist /app/static
 
-# Expose API port
-EXPOSE 8000
+# Permission
+RUN chmod +x run.sh
 
-# Volume for persistent data
-VOLUME ["/data"]
-
-CMD ["/run.sh"]
+# Entrypoint
+CMD ["./run.sh"]
