--- a/BudgetIA/repository.yaml
+++ b/BudgetIA/repository.yaml
@@ -1,3 +1,3 @@
-name: "BudgetIA Add-ons"
+name: "BudgetIA Add-ons (Monorepo)"
 url: "https://github.com/lucianobtorres/budgetia_ha"
 maintainer: "Luciano Torres <lucianobtorres@gmail.com>"
