Fix: Add configurable GOOGLE_OAUTH_REDIRECT_URI for HA usage

--- a/BudgetIA/config.yaml
+++ b/BudgetIA/config.yaml
@@ -1,5 +1,5 @@
 name: "BudgetIA (Monorepo)"
-version: "1.0.3"
+version: "1.0.4"
 slug: "budgetia"
 description: "Assistente Financeiro Pessoal com IA Local/Remota, Planilhas e Dashboard Rico."
 url: "https://github.com/lucianobtorres/budgetia_ha"
@@ -21,6 +21,7 @@ options:
   gemini_api_key: ""
   google_oauth_client_id: ""
   google_oauth_client_secret: ""
+  google_oauth_redirect_uri: ""
   secret_key: "change_me_in_production"
   upstash_redis_url: ""
   planilha_path: ""
@@ -31,6 +32,7 @@ schema:
   gemini_api_key: str?
   google_oauth_client_id: str?
   google_oauth_client_secret: str?
+  google_oauth_redirect_uri: str?
   secret_key: str?
   upstash_redis_url: str?
   planilha_path: str?
