Feat: Add google_service_account_json option for Service Account injection

--- a/BudgetIA/config.yaml
+++ b/BudgetIA/config.yaml
@@ -1,5 +1,5 @@
 name: "BudgetIA (Monorepo)"
-version: "1.0.5"
+version: "1.0.6"
 slug: "budgetia"
 description: "Assistente Financeiro Pessoal com IA Local/Remota, Planilhas e Dashboard Rico."
 url: "https://github.com/lucianobtorres/budgetia_ha"
@@ -23,6 +23,7 @@ options:
   google_oauth_client_id: ""
   google_oauth_client_secret: ""
   google_oauth_redirect_uri: ""
+  google_service_account_json: ""
   secret_key: "change_me_in_production"
   upstash_redis_url: ""
   planilha_path: ""
@@ -35,6 +36,7 @@ schema:
   google_oauth_client_id: str?
   google_oauth_client_secret: str?
   google_oauth_redirect_uri: str?
+  google_service_account_json: str?
   secret_key: str?
   upstash_redis_url: str?
   planilha_path: str?
